1) Updated codes to use lib jgroups-3.4.0.Alpha1